# crnpy

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
crnpy/: stochastic.py  tools.py
src/crnpy/: __init__.py  api.py  factory.py
src/crnpy/crn/: __init__.py  crn_class.py  random.py  token.py  utils.py
src/crnpy/legacy/: __init__.py  stochastic.py  tools.py
tests/: test_api.py  test_crn_class.py  test_crn_utils.py  test_factory.py  test_random.py  test_stochastic.py  test_token.py  test_tools.py
tests/data/: test_crn.txt
